--- a/src/main/resources/templates/seduta/sedutaShow.html
+++ b/src/main/resources/templates/seduta/sedutaShow.html
@@ -6,6 +6,41 @@
 </head>
 <body>
 	<div layout:fragment="content">
+
+		<!-- modale inserimento numero del verbale -->
+		<!-- modale inserimento giorni per effettuare l'integrazione -->
+		<div th:unless="${sedutaWrapper.seduta.numeroVerbale != null and #strings.isEmpty(sedutaWrapper.seduta.numeroVerbale)}" id="numeroVerbale-modal"
+			class="modal fade modal-numeroVerbale"
+			data-model-index="1" role="dialog">
+			<div class="modal-dialog modal-sm">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal">
+							<span aria-hidden="true">×</span>
+						</button>
+						<h4 class="modal-title" id="myModalLabel"
+							th:text="#{label.inserimento_numero_verbale}"></h4>
+					</div>
+					<div class="modal-body">
+						<form id="formNumeroVerbale" class="form-horizontal"
+							th:action="@{|/seduta/${sedutaWrapper.seduta.id}/validate|}"
+							method="post" enctype="multipart/form-data"
+							novalidate="novalidate">
+
+							<input type="text" th:field="${sedutaWrapper.seduta.numeroVerbale}" class="" />
+
+							<input id="submitButtonModal" type="submit" style="display: none;" />
+
+						</form>
+					</div>
+					<div class="modal-footer">
+        				<label for="submitButtonModal" class="btn btn-success pull-right" th:text="#{label.invia}">Inviak</label>
+        				<button type="button" class="btn btn-primary pull-right" data-dismiss="modal" th:text="#{label.chiudi}">Chiudi</button>
+      				</div>
+				</div>
+			</div>
+		</div>
+
 		<div class="row">
 			<div class="col-xs-12">
 				<div class="x_panel">
@@ -26,7 +61,10 @@
 									<li><a th:if="${sedutaWrapper.canEdit == true}" th:text="#{label.modifica}" th:href="@{|/seduta/${sedutaWrapper.seduta.id}/edit|}"></a></li>
 									<li><a th:if="${sedutaWrapper.canEdit == true}" th:text="#{label.gestione_domande}" th:href="@{|/seduta/${sedutaWrapper.seduta.id}/handle|}"></a></li>
 									<li><a th:text="#{label.invia_email_commissione_seduta}" th:href="@{|/seduta/${sedutaWrapper.seduta.id}/convocazioneCommissione|}"></a></li>
-									<li><a th:if="${sedutaWrapper.canValidate == true and !#lists.isEmpty(sedutaWrapper.seduta.valutazioniCommissione)}" th:text="#{label.inserisci_valutazione}" th:href="@{|/seduta/${sedutaWrapper.seduta.id}/validate|}"></a></li>
+									<th:block th:if="${sedutaWrapper.canValidate == true and !#lists.isEmpty(sedutaWrapper.seduta.valutazioniCommissione)}">
+									<li><a th:if="${sedutaWrapper.seduta.numeroVerbale != null and !#strings.isEmpty(sedutaWrapper.seduta.numeroVerbale)}" th:text="#{label.inserisci_valutazione}" th:href="@{|/seduta/${sedutaWrapper.seduta.id}/validate|}"></a></li>
+									<li><a th:if="${sedutaWrapper.seduta.numeroVerbale == null or #strings.isEmpty(sedutaWrapper.seduta.numeroVerbale)}" th:text="#{label.inserisci_valutazione}" data-toggle="modal" data-target=".modal-numeroVerbale"></a></li>
+									</th:block>
 								</ul>
 							</div>
 						</div>
@@ -50,6 +88,10 @@
 							{"targets": 0, "width": "1px", "sClass": "center" }
 						],
 					})
+
+					if([[${errorNumeroVerbale}]] == true) {
+						$("#numeroVerbale-modal").modal("show");
+					}
 				})
 
 			/*]]>*/
