--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -174,6 +174,16 @@
 							</div>
 						</div>
 					</div>
+					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+						<div class="tile-stats clickable" onclick="goTo('accreditamento/odg/list')">
+							<div class="icon"><i class="fa fa-clock-o"></i></div>
+							<div class="col-xs-10">
+			                	<div class="count" th:text="${homeWrapper.domandeInInsODG}"></div>
+			                	<h3 class="tile-h3" th:text="${homeWrapper.domandeInInsODG == 1} ? #{label.domanda_accreditamento} : #{label.domande_accreditamento}"></h3>
+			                	<p class="count-text" th:text="#{label.da_inserire_nel_odg}"></p>
+							</div>
+						</div>
+					</div>
 				</div>
 
 				<!-- COMMISSIONE -->
