--- a/src/main/resources/templates/accreditamento/accreditamentoEdit.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoEdit.html
@@ -122,7 +122,7 @@
 						<h2 th:text="${#messages.msg('label.provider_accreditamento') + ' ' + accreditamentoWrapper.provider.denominazioneLegale + ' (' + accreditamentoWrapper.provider.codiceFiscale + ') ' + #messages.msg('label.tipo_provider') + ' ' + accreditamentoWrapper.provider.tipoOrganizzatore.gruppo}"></h2>
 						<div class="pull-right buttons-header">
 							<div class="dropdown pull-right">
-  								<button class="btn btn-success dropdown-toggle" type="button" data-toggle="dropdown" th:if="${#authentication.principal.isSegreteria()}">
+  								<button class="btn btn-success dropdown-toggle" type="button" data-toggle="dropdown">
 									<span th:text="#{label.menu_azioni}"></span>
 									<span class="caret"></span>
 								</button>
