--- a/src/main/resources/templates/fragments/sidebarAndTop.html
+++ b/src/main/resources/templates/fragments/sidebarAndTop.html
@@ -49,6 +49,7 @@
 									<li><a th:href="@{/provider/anagrafica/list}" th:text="#{label.anagrafiche}">label.anagrafiche</a></li>
 									<li><a th:href="@{/provider/pianoFormativo/list}" th:text="#{label.piano_formativo}">label.piano_formativo</a></li>
 									<li><a th:href="@{/comunicazione/dashboard}" th:text="#{label.comunicazioni}"></a></li>
+									<li><a th:href="@{/provider/evento/list}" th:text="#{label.eventi}"></a></li>
 									<!--
 									<li><a href="#" th:text="#{label.eventi}">label.eventi</a></li>
 									<li><a href="#" th:text="#{label.relazione_annuale}">label.relazione_annuale</a></li>
