--- a/src/main/resources/templates/accreditamento/accreditamentoEdit.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoEdit.html
@@ -192,41 +192,58 @@
 						var tab = $(e.target).attr('id');
 
 						if (tab == "tab2") {
-							// check se la sezione è stata compilata (procede in caso affermativo, nega l'apertura della tab e manda un warn altrimenti)
-							// controlla anche se il warning è già aperto e in caso lo anima
-							if (![[${accreditamentoWrapper.sezione1Stato}]]) {
+							// come richiesto il primo check è sulla sede legale
+							if (![[${accreditamentoWrapper.sedeLegaleStato}]]) {
 								var exists = false;
 								//se è già aperto il pnotify chiama l'animate (attention seeker)
 						        $(".ui-pnotify-text").each(function() {
-						            if ($(this).html() == [[#{message.compilare_tab1}]]) {
+						            if ($(this).html() == [[#{message.inserire_almeno_sede_legale}]]) {
 						                exists = true;
 						                animate($(this).parent().parent());
 						            }
 						        });
 								//altrimenti apre un nuovo pnotify
 						        if (!exists) {
-						        	sendNotifyStatic([[#{message.warning}]], [[#{message.compilare_tab1}]], "warning");
+						        	sendNotifyStatic([[#{message.warning}]], [[#{message.inserire_almeno_sede_legale}]], "warning");
 						        }
 						        return false;
 							} else {
-								//check se non sia stato inserito alcun responsabile (altrimenti warn legale non modificabile)
-								if ([[${accreditamentoWrapper.responsabileSegreteria == null} and
-								      ${accreditamentoWrapper.responsabileAmministrativo == null} and
-								      ${accreditamentoWrapper.responsabileSistemaInformatico == null} and
-								      ${accreditamentoWrapper.responsabileQualita == null}]]) {
+								// check se la sezione è stata compilata (procede in caso affermativo, nega l'apertura della tab e manda un warn altrimenti)
+								// controlla anche se il warning è già aperto e in caso lo anima
+								if (![[${accreditamentoWrapper.sezione1Stato}]]) {
 									var exists = false;
+									//se è già aperto il pnotify chiama l'animate (attention seeker)
 							        $(".ui-pnotify-text").each(function() {
-							            if ($(this).html() == [[#{message.legale_non_piu_modificabile}]]) {
+							            if ($(this).html() == [[#{message.compilare_tab1}]]) {
 							                exists = true;
 							                animate($(this).parent().parent());
 							            }
 							        });
+									//altrimenti apre un nuovo pnotify
 							        if (!exists) {
-							        	sendNotifyStatic([[#{message.warning}]], [[#{message.legale_non_piu_modificabile}]], "warning");
+							        	sendNotifyStatic([[#{message.warning}]], [[#{message.compilare_tab1}]], "warning");
 							        }
+							        return false;
+								} else {
+									//check se non sia stato inserito alcun responsabile (altrimenti warn legale non modificabile)
+									if ([[${accreditamentoWrapper.responsabileSegreteria == null} and
+									      ${accreditamentoWrapper.responsabileAmministrativo == null} and
+									      ${accreditamentoWrapper.responsabileSistemaInformatico == null} and
+									      ${accreditamentoWrapper.responsabileQualita == null}]]) {
+										var exists = false;
+								        $(".ui-pnotify-text").each(function() {
+								            if ($(this).html() == [[#{message.legale_non_piu_modificabile}]]) {
+								                exists = true;
+								                animate($(this).parent().parent());
+								            }
+								        });
+								        if (!exists) {
+								        	sendNotifyStatic([[#{message.warning}]], [[#{message.legale_non_piu_modificabile}]], "warning");
+								        }
+									}
+									//in ogni caso non è bloccante
+									return true;
 								}
-								//in ogni caso non è bloccante
-								return true;
 							}
 						}
 						if (tab == "tab3") {
