--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -58,16 +58,6 @@
 
 				<!-- REFEREE -->
 				<div class="row" th:if="${homeWrapper.isReferee}">
-					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
-						<div class="tile-stats">
-							<div class="icon"><i class="fa fa-exclamation"></i></div>
-							<div class="col-xs-10">
-			                	<div class="count" th:text="${homeWrapper.domandeNonValutateConsecutivamente}"></div>
-			                	<h3 class="tile-h3" th:text="${homeWrapper.domandeNonValutateConsecutivamente == 1} ? #{label.valutazione} : #{label.valutazioni}"></h3>
-			                	<p class="count-text" th:text="${homeWrapper.domandeNonValutateConsecutivamente == 1} ? #{label.non_effettuata_consecutivamente} : #{label.non_effettuate_consecutivamente}">Da valutare</p>
-							</div>
-						</div>
-					</div>
 					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4" onclick="goTo('accreditamento/valutazioneReferee/list')">
 						<div class="tile-stats clickable">
 							<div class="icon"><i class="fa fa-list-alt"></i></div>
@@ -75,6 +65,16 @@
 			                	<div class="count" th:text="${homeWrapper.domandeInCarica}"></div>
 			                	<h3 class="tile-h3" th:text="${homeWrapper.domandeInCarica == 1} ? #{label.domanda_accreditamento} : #{label.domande_accreditamento}"></h3>
 			                	<p class="count-text" th:text="#{label.da_valutare}">Da valutare</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4" th:onclick="'goTo(\''+|referee/${homeWrapper.user.id}/accreditamento/nonValutate/list|+'\')'">
+						<div class="tile-stats clickable">
+							<div class="icon"><i class="fa fa-exclamation"></i></div>
+							<div class="col-xs-10">
+			                	<div class="count" th:text="${homeWrapper.domandeNonValutateConsecutivamente}"></div>
+			                	<h3 class="tile-h3" th:text="${homeWrapper.domandeNonValutateConsecutivamente == 1} ? #{label.valutazione} : #{label.valutazioni}"></h3>
+			                	<p class="count-text" th:text="${homeWrapper.domandeNonValutateConsecutivamente == 1} ? #{label.non_effettuata_consecutivamente} : #{label.non_effettuate_consecutivamente}">Da valutare</p>
 							</div>
 						</div>
 					</div>
